CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SORE_ENGINE)

SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "-Wall")
ENDIF(UNIX)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 3)
SET(VERSION_PATCH 0)
SET(VERSION_BRANCH "trunk")

ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(src)