CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(SORE REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Boost COMPONENTS signals REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
IF(UNIX)
    FIND_PACKAGE(Fontconfig REQUIRED)  
ENDIF(UNIX)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SORE_INCLUDE_DIR})

INCLUDE_DIRECTORIES("3rdparty")

ADD_SUBDIRECTORY(3rdparty)

SET(CMAKE_VERSION_OUT ${CMAKE_CURRENT_SOURCE_DIR}/cmake_version.h)
SET(CMAKE_VERSION_IN  ${CMAKE_CURRENT_SOURCE_DIR}/cmake_version.h.in)
CONFIGURE_FILE(${CMAKE_VERSION_IN} ${CMAKE_VERSION_OUT})

SET(${CMAKE_PROJECT_NAME}_SRCS 
  debug_gui.cpp main.cpp state_default.cpp version_info.cpp app.rc)
  
SET(${CMAKE_PROJECT_NAME}_HEADERS 
  app_log.h debug_gui.h state_default.h ${CMAKE_VERSION_OUT})

IF(UNIX)
  SET(CMAKE_CXX_FLAGS "-Wall")
ENDIF(UNIX)

SOURCE_GROUP("Source Files" FILES ${${CMAKE_PROJECT_NAME}_SRCS})
SOURCE_GROUP("Header Files" FILES ${${CMAKE_PROJECT_NAME}_HEADERS})

SOURCE_GROUP("3rd Party\\Source Files" FILES ${KISSFFT_SRCS})
SOURCE_GROUP("3rd Party\\Header Files" FILES ${KISSFFT_HEADERS})


ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} WIN32
  ${${CMAKE_PROJECT_NAME}_SRCS} ${${CMAKE_PROJECT_NAME}_HEADERS} ${KISSFFT_SRCS} ${KISSFFT_HEADERS})

SET_TARGET_PROPERTIES(
${CMAKE_PROJECT_NAME}
PROPERTIES
  DEBUG_POSTFIX _debug
  OUTPUT_NAME ${CMAKE_PROJECT_NAME}
  RUNTIME_OUTPUT_DIRECTORY ../bin
  COMPILE_DEFINITIONS_DEBUG DEBUG
)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} 
  ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}
  ${Boost_LIBRARIES} ${FREETYPE_LIBRARY} ${ZLIB_LIBRARY}
  ${FONTCONFIG_LIBRARIES} ${GLEW_LIBRARY} ${SDL_LIBRARY}
  ${SORE_LIBRARY})

SET_PROPERTY(TARGET ${CMAKE_PROJECT_NAME} PROPERTY INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib/)

INSTALL(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION .)
