CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(DEFAULT_SHADERS_SRCS default.shad default_fragment.glsl default_vertex.glsl)

SET(OUTPUT_NAME default_shaders.sdp)

ADD_CUSTOM_COMMAND(
	OUTPUT ${OUTPUT_NAME}
	COMMAND sore_create_package --prefix=data/Shaders --compression ${CMAKE_CURRENT_BINARY_DIR}/${OUTPUT_NAME} ${DEFAULT_SHADERS_SRCS}
	DEPENDS sore_create_package ${DEFAULT_SHADERS_SRCS}
	WORKING_DIRECTORY ${SORE_ENGINE_SOURCE_DIR}/data/Shaders
)

ADD_CUSTOM_TARGET(default_shaders ALL DEPENDS ${OUTPUT_NAME})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${OUTPUT_NAME} DESTINATION .)