IF(WIN32)
	SET(Boost_USE_STATIC_LIBS ON)
	SET(Boost_USE_MULTITHREADED ON)
ENDIF()

FIND_PACKAGE(Boost COMPONENTS program_options filesystem system REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS})

SET(CREATE_PACKAGE_SRCS main.cpp walker.h walker.cpp)
ADD_EXECUTABLE(sore_create_package ${CREATE_PACKAGE_SRCS})
TARGET_LINK_LIBRARIES(sore_create_package ${ZLIB_LIBRARY} ${Boost_LIBRARIES})

INSTALL(TARGETS sore_create_package DESTINATION .)
